@@ -1,4 +1,5 @@
 @echo off
 title The WECIB Card Game
-java -jar target\wecib-card-game-1.0-SNAPSHOT.jar
+set PATH=%CD%\javafx-sdk-21\bin;%PATH%
+java --module-path "%CD%\javafx-sdk-21\lib" --add-modules javafx.controls,javafx.fxml,javafx.media -jar target\wecib-card-game-1.0-SNAPSHOT.jar
 pause
